Use autowiring to get the configuration where possible